...
                    android:layout_marginStart="@dimen/grid_margin_left"
                    android:text="@string/mobileFeesAndProcessingTime"
                    android:textAppearance="@style/TextAppearance.Hyperwallet.Body2" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/add_transfer_method_static_container"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="@dimen/row_height_single_entry"
                android:background="@color/colorBackgroundDisabled"
                android:orientation="vertical">

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_transfer_method_button"
                    style="@style/Widget.Hyperwallet.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center"
                    android:layout_marginStart="@dimen/button_left_margin"
                    android:layout_marginTop="@dimen/button_top_margin"
...
